@@ -3,6 +3,7 @@ version 2.0-rc2 XX-May-2012
 . [NEW] RenderTexture: Added support for Depth Stencil
 . [FIX] Macros: CCLOG doesn't log the function name. Only CCLOGWARN
 . [FIX] Particle: Handles premultipled images correctly
+. [FIX] SpriteFrameCache: plist is not loaded again if it was already loaded (performance)
 
 version 2.0-rc1 19-Apr-2012
 . [NEW] v1.1 Forward-ported changes:
